# gpt-code-ui

./: .dockerignore  .env.azure-example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  README_2.md  app.yaml  azure-pipelines.yml  bkenv  deploy_docker.py  deploy_requirements.txt  docker-compose.yml  docker.sh  nginx.conf  pyproject.toml  requirements.txt  run.sh  run_with_app_service_config.py  setup.py
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yml  docs.yml  feature-request.yaml
.github/workflows/: deploy.yml  docker-image.yml
docker/: Dockerfile  Dockerfile.tag
frontend/: .eslintrc.cjs  .npmrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/assets/: 3Dmol-min.js  3Dmol-min.js.LICENSE.txt  Changelog.md  Disclaimer.md
frontend/src/: App.css  App.tsx  config.tsx  index.css  vite-env.d.ts
frontend/src/components/: Chat.css  Chat.tsx  Documentation.css  Documentation.tsx  Foundry.tsx  Input.css  Input.tsx  Kernel.tsx  Logo.css  Logo.tsx  Settings.css  Settings.tsx  Sidebar.css  Sidebar.tsx
gpt_code/: main.py
gpt_code/kernel_program/: config.py  kernel_manager.py  launch_kernel.py  main.py  utils.py
gpt_code/webapp/: main.py
gpt_code/webapp/static/: actions.js  style.css
gpt_code/webapp/templates/: index.html
gpt_code_ui/: main.py  st_playground.py
gpt_code_ui/function_library/: __init__.py  examples.py  mol_utils.py  parser.py
gpt_code_ui/kernel_program/: config.py  kernel.py  kernel_manager.py  main.py  stoppable_thread.py  utils.py
gpt_code_ui/webapp/: llm.py  main.py  prompts.py
lib/: .env.example  Makefile  README.md  setup.py
lib/frontend/: index.html  package.json
lib/frontend/src/components/: Chat.tsx  Input.css  Sidebar.css  Sidebar.tsx
lib/gpt_code_ui/kernel_program/: config.py  kernel_manager.py  utils.py
lib/gpt_code_ui/webapp/: main.py
notes/: blog-post-notes.txt  todo.txt
scripts/: build_docker_for_release.sh  build_docker_for_trunk.sh  create_release.sh  create_template.py
tests/test_gpt_code_ui/: test_chat_history.py  test_function_prompts.py
tests/unit/: test_webapp.py
tests/unit/test_gpt_code_ui/: test_function_prompts.py
