[tool.mypy]
files = "gpt_code_ui/**/*.py"
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.poetry]
name = "gpt-code-ui"
version = "0.42.40"
description = "An Open Source version of ChatGPT Code Interpreter"
authors = ["Mathias Winkel",
           "Tobias Plötz",
           "Christian Roeder",
           "Rick Lamers"]
license = "MIT"
readme = "README.md"
packages = [
     { include = "gpt_code_ui" },
]
include = [
    { path = "UserInterface.png", format = ["sdist", "wheel"] },
    { path = "LICENSE", format = ["sdist", "wheel"] },
    { path = "gpt_code_ui/webapp/static/**/*", format = ["sdist", "wheel"] },
]
exclude = [
    "**/.gitignore",
    "**/.DS_Store",
]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.24.0"
requests = "^2.31.0"
flask = "^2.3.2"
flask-cors = "^3.0.10"
foundry-dev-tools = "^1.3"
python-dotenv = "^1.0.0"
pandas = "^1.5.3"
openai = "^1.10.0"
numpy = "^1.25.1"
dateparser = "^1.1.8"
geopandas = "^0.13.2"
tabulate = "^0.9.0"
pypdf2 = "^3.0"
pdfminer = ">=20191125,<20191200"
pdfplumber = "^0.10"
matplotlib = "^3.7.2"
openpyxl = "^3.1.2"
rdkit = "2023.3.3"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
wordcloud = "^1.9.3"
xlsxwriter = "^3.1.9"

[tool.poetry.scripts]
gptcode = "gpt_code_ui.main:main"

[tool.poetry.group.dev.dependencies]
streamlit = "^1.31.1"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
