[tool.mypy]
files = "gpt_code_ui/**/*.py"
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.poetry]
name = "gpt-code-ui"
version = "0.42.40"
description = "An Open Source version of ChatGPT Code Interpreter"
authors = ["Mathias Winkel",
           "Tobias Plötz",
           "Christian Roeder",
           "Rick Lamers"]
license = "MIT"
readme = "README.md"
packages = [
     { include = "gpt_code_ui" },
]
include = [
    { path = "UserInterface.png", format = ["sdist", "wheel"] },
    { path = "LICENSE", format = ["sdist", "wheel"] },
    { path = "gpt_code_ui/webapp/static/**/*", format = ["sdist", "wheel"] },
]
exclude = [
    "**/.gitignore",
    "**/.DS_Store",
]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.28.0"
requests = "^2.31.0"
flask = "^2.3.2"
flask-cors = "^3.0.10"
foundry-dev-tools = "^1.3"
python-dotenv = "^1.0.0"
pandas = "^2.1.4"
openai = "^1.10.0"

[tool.poetry.scripts]
gptcode = "gpt_code_ui.main:main"

[tool.poetry.group.dev.dependencies]
streamlit = "^1.31.1"
pre-commit = "^3.6.0"
pytest = "^8.0.2"

[tool.poetry.group.kernel.dependencies]
numpy = "^1.26.3"
rdkit = "^2023.9.3"
pandas = "^2.1.4"
ipykernel = "^6.28.0"
dateparser = "^1.2.0"
geopandas = "^0.14.2"
tabulate = "^0.9.0"
pypdf2 = "^3.0.1"
pdfminer = "^20191125"
pdfplumber = "^0.10.3"
matplotlib = "^3.8.2"
openpyxl = "^3.1.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
wordcloud = "^1.9.3"
xlsxwriter = "^3.1.9"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
