[tool.poetry]
name = "gpt-code-ui"
version = "0.42.40"
description = "An Open Source version of ChatGPT Code Interpreter"
authors = ["Mathias Winkel",
           "Tobias Plötz",
           "Christian Röder",
           "Rick Lamers"]
license = "MIT"
readme = "README.md"
packages = [
     { include = "gpt_code_ui" },
]
include = [
    { path = "UserInterface.png", format = ["sdist", "wheel"] },
    { path = "LICENSE", format = ["sdist", "wheel"] },
    { path = "gpt_code_ui/webapp/static/**/*", format = ["sdist", "wheel"] },
]
exclude = [
    "**/.gitignore",
    "**/.DS_Store",
]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.28.0"
requests = "^2.31.0"
flask = "^2.3.2"
flask-cors = "^3.0.10"
foundry-dev-tools = "^1.3"
python-dotenv = "^1.0.0"
pandas = "^2.1.4"
openai = "^1.10.0"

[tool.poetry.group.dev.dependencies]
streamlit = "^1.31.1"
pre-commit = "^3.6.0"
pytest = "^8.0.2"

[tool.poetry.group.devtools.dependencies]
mypy = "^1"
ruff = "^0"
black = "^23"

# TODO why in poetry? groups are not really self-contained, but kernel env is
[tool.poetry.group.kernel.dependencies]
numpy = "^1.26.3"
rdkit = "^2023.9.3"
bio = "^1.6.2"
py3Dmol = "^2.0.4"
pandas = "^2.1.4"
ipykernel = "^6.28.0"
dateparser = "^1.2.0"
geopandas = "^0.14.2"
tabulate = "^0.9.0"
pypdf2 = "^3.0.1"
pdfminer = "^20191125"
pdfplumber = "^0.10.3"
matplotlib = "^3.8.2"
openpyxl = "^3.1.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
wordcloud = "^1.9.3"
xlsxwriter = "^3.1.9"
docx = "^0.2.4"

[tool.poetry.scripts]
gptcode = "gpt_code_ui.main:main"

[tool.mypy]
files = "gpt_code_ui/**/*.py"
ignore_missing_imports = true

[tool.ruff]
# TODO refactor to have source in /src
include = ["gpt_code_ui/**/*.py", "tests/**/*.py"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = ["I", "C90"]

[tool.ruff.lint.mccabe]
# TODO refactor and reduce
max-complexity = 18

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
